k8s/webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  labels:
    app: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
        - name: webhook-container
          image: ${IMAGE}
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.3"
              memory: "256Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /webhook/hc
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /webhook/hc
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
