k8s/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30002
      protocol: TCP
  selector:
    app: webhook
