k8s/webhook/ingress.yaml
# usuarios-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: "apps-shared-alb"
spec:
  rules:
  - http:
      paths:
      - path: /webhooks
        pathType: Prefix
        backend:
          service:
            name: webhook-service
            port:
              number: 80
